--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
     </div>
   </nav>
 
+
 <!--slider -->
 <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel" data-bs-interval="10000">
    
@@ -64,10 +65,10 @@
         <img src="img/img2.jpg" class="d-block w-100" alt="...">
       </div>
       <div class="carousel-item">
-        <img src="img/img2.jpg" class="d-block w-100" alt="...">
+        <img src="img/img3.jpg" class="d-block w-100" alt="...">
       </div>
       <div class="carousel-item">
-        <img src="img/img3.jpg
+        <img src="img/img2.jpg" class="d-block w-100" alt="...">
     </div>
     <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
       <span class="carousel-control-prev-icon" aria-hidden="true"></span>
@@ -78,15 +79,137 @@
       <span class="visually-hidden">Next</span>
     </button>
     
-</div>
     </div>
+</div>
+    
   
   <!-- Page Content -->
-  <div class="container">
-    <h1 class="mt-4">Logo Nav by Start Bootstrap</h1>
-    <p>The logo in the navbar is now a default Bootstrap feature in Bootstrap! Make sure to set the height
-      of the logo within the HTML or using CSS. For best results, use an SVG image as your logo.</p>
+  <div class="container my-5">
+    <div class="row">
+      <div class="col-md-6">
+        <img src="img/img2.jpg" alt="About Us" class="img-fluid">
+      </div>
+      <div class="col-md-6">
+        <h2>About Us</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed auctor est in ex ultricies, non efficitur sapien ullamcorper. In non varius felis. Nam at ligula et nulla fermentum congue a eu lectus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Donec tristique laoreet nibh, vel ultricies nunc commodo ac. Duis eu magna sit amet felis hendrerit commodo nec sit amet enim.</p>
+        <p>Sed a lectus ut turpis lacinia ullamcorper ac eu nulla. In consequat arcu et bibendum ullamcorper. Morbi laoreet arcu vel aliquet blandit. Aliquam eget felis rutrum, bibendum purus eget, cursus mi. Vestibulum sit amet mauris velit. Sed eu fringilla massa, id volutpat purus. Nunc efficitur, sapien a pellentesque venenatis, felis elit fringilla velit, ac suscipit lectus tortor eu dolor.</p>
+      </div>
+    </div>
   </div>
+  
+  
+
+
+
+  <!-- galary -->
+  <div class="container">
+    <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
+      <div class="col">
+        <div class="card">
+          <img src="img/img2.jpg" class="card-img-top" alt="...">
+        </div>
+      </div>
+      <div class="col">
+        <div class="card">
+          <img src="img/img2.jpg" class="card-img-top" alt="...">
+        </div>
+      </div>
+      <div class="col">
+        <div class="card">
+          <img src="img/img2.jpg" class="card-img-top" alt="...">
+        </div>
+      </div>
+      <div class="col">
+        <div class="card">
+          <img src="img/img2.jpg" class="card-img-top" alt="...">
+        </div>
+      </div>
+      <div class="col">
+        <div class="card">
+          <img src="img/img2.jpg" class="card-img-top" alt="...">
+        </div>
+      </div>
+      <div class="col">
+        <div class="card">
+          <img src="img/img2.jpg" class="card-img-top" alt="...">
+        </div>
+      </div>
+    </div>
+  </div>
+
+
+  <!-- footer -->
+  <footer class="text-center text-white" style="background-color: #f1f1f1;">
+    <!-- Grid container -->
+    <div class="container pt-4">
+      <!-- Section: Social media -->
+      <section class="mb-4">
+        <!-- Facebook -->
+        <a
+          class="btn btn-link btn-floating btn-lg text-dark m-1"
+          href="#!"
+          role="button"
+          data-mdb-ripple-color="dark"
+          ><i class="fab fa-facebook-f"></i
+        ></a>
+  
+        <!-- Twitter -->
+        <a
+          class="btn btn-link btn-floating btn-lg text-dark m-1"
+          href="#!"
+          role="button"
+          data-mdb-ripple-color="dark"
+          ><i class="fab fa-twitter"></i
+        ></a>
+  
+        <!-- Google -->
+        <a
+          class="btn btn-link btn-floating btn-lg text-dark m-1"
+          href="#!"
+          role="button"
+          data-mdb-ripple-color="dark"
+          ><i class="fab fa-google"></i
+        ></a>
+  
+        <!-- Instagram -->
+        <a
+          class="btn btn-link btn-floating btn-lg text-dark m-1"
+          href="#!"
+          role="button"
+          data-mdb-ripple-color="dark"
+          ><i class="fab fa-instagram"></i
+        ></a>
+  
+        <!-- Linkedin -->
+        <a
+          class="btn btn-link btn-floating btn-lg text-dark m-1"
+          href="#!"
+          role="button"
+          data-mdb-ripple-color="dark"
+          ><i class="fab fa-linkedin"></i
+        ></a>
+        <!-- Github -->
+        <a
+          class="btn btn-link btn-floating btn-lg text-dark m-1"
+          href="#!"
+          role="button"
+          data-mdb-ripple-color="dark"
+          ><i class="fab fa-github"></i
+        ></a>
+      </section>
+      <!-- Section: Social media -->
+    </div>
+    <!-- Grid container -->
+  
+    <!-- Copyright -->
+    <div class="text-center text-dark p-3" style="background-color: rgba(0, 0, 0, 0.2);">
+      © 2023 Copyright:
+
+    </div>
+    <!-- Copyright -->
+  </footer>
+  
+  
 
   </body>
 </html>
