--- a/index.html
+++ b/index.html
@@ -21,10 +21,17 @@
   </a>
 </div>
 
+
+<!-- main iamge -->
+
+
+
+
+
 <div style="padding-left:16px">
-  <h2>Responsive Topnav Example</h2>
-  <p>Resize the browser window to see how it works.</p>
-</div>
+    <h2>Responsive Topnav Example</h2>
+    <p>Resize the browser window to see how it works.</p>
+  </div>
 
 <script>
 function myFunction() {
