--- a/index.html
+++ b/index.html
@@ -23,8 +23,14 @@
 
 
 <!-- main iamge -->
-
-
+<div class="header">
+    <img src="img/img4.jpg" alt="Header Image">
+    <div class="text">
+        <h3>hello</h3>
+        <!-- <h1>Responsive Image Header Full Width</h1>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ac justo magna. Nulla facilisi. Nullam hendrerit diam id neque commodo, eu scelerisque turpis tincidunt.</p> -->
+    </div>
+</div>
 
 
 
