--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 <!-- nav bar -->
 <div class="topnav" id="myTopnav">
     <a href=""><div class="logo">
-        <img src="logo.png" alt="Ambient Spaces Photography">
+        <img src="img/cover.png" width="250px" alt="Ambient Spaces Photography">
       </div></a>
   <a href="#home" class="active">Home</a>
-  <a href="#news">News</a>
+  <a href="#news">Portfolio</a>
   <a href="#contact">Contact</a>
   <a href="#about">About</a>
   <a href="javascript:void(0);" class="icon" onclick="myFunction()">
@@ -26,7 +26,7 @@
 <div class="header">
     <img src="img/img4.jpg" alt="Header Image">
     <div class="text">
-        <h3>hello</h3>
+        <h3>Welcome.</h3>
         <!-- <h1>Responsive Image Header Full Width</h1>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ac justo magna. Nulla facilisi. Nullam hendrerit diam id neque commodo, eu scelerisque turpis tincidunt.</p> -->
     </div>
