--- a/index.html
+++ b/index.html
@@ -32,12 +32,40 @@
     </div>
 </div>
 
+<!-- about -->
+<section id="about">
+    <h2>About Us</h2>
+    <p>We are a team of passionate professionals dedicated to providing high-quality products and services to our customers. With over 10 years of experience in the industry, we have built a reputation for excellence and experience in the industry, we have built a reputation innovation.</p>
+    <img src="img/about.png" alt="About Us Image">
+  </section>
 
-
-<div style="padding-left:16px">
-    <h2>Responsive Topnav Example</h2>
-    <p>Resize the browser window to see how it works.</p>
+ <!-- gallary  -->
+ <h2 class="title">Gallery</h2>
+ <div class="gallery">
+    <div class="gallery-item">
+      <img src="img/img3.jpg" alt="Image 1">
+    </div>
+    <div class="gallery-item">
+      <img src="img/img3.jpg" alt="Image 2">
+    </div>
+    <div class="gallery-item">
+      <img src="img/img3.jpg" alt="Image 3">
+    </div>
+    <div class="gallery-item">
+      <img src="img/img3.jpg" alt="Image 4">
+    </div>
   </div>
+
+  <div class="center">
+    <a href="https://example.com" class="lin">More. . .</a>
+  </div>
+
+  <!-- footer -->
+  
+  <footer>
+    <p>&copy; 2023 Example Company. All rights reserved.</p>
+  </footer>
+  
 
 <script>
 function myFunction() {
