--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
   <!-- footer -->
   
   <footer>
-    <p>&copy; 2023 Example Company. All rights reserved.</p>
+    <p>&copy; 2023 Ambient Spaces Photography. All rights reserved.</p>
   </footer>
   
 
