--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <img src="img/cover.png" width="250px" alt="Ambient Spaces Photography">
       </div></a>
   <a href="#home" class="active">Home</a>
-  <a href="#news">Portfolio</a>
+  <a href="portfolio.html">Portfolio</a>
   <a href="#contact">Contact</a>
   <a href="#about">About</a>
   <a href="javascript:void(0);" class="icon" onclick="myFunction()">
