--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 <!-- about -->
 <section id="about">
     <h2>About Us</h2>
-    <p>We are a team of passionate professionals dedicated to providing high-quality products and services to our customers. With over 10 years of experience in the industry, we have built a reputation for excellence and experience in the industry, we have built a reputation innovation.</p>
+    <p>Ambient Spaces Photography is a premier urban sports aerial stills photography company that uses advanced drone technology to capture stunning images from unique angles.</p>
     <img src="img/about.png" alt="About Us Image">
   </section>
 
