--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -34,7 +35,7 @@
 <!-- about -->
 <section id="about">
     <h2>About Us</h2>
-    <p>Ambient Spaces Photography is a premier urban sports aerial stills photography company that uses advanced drone technology to capture stunning images from unique angles.</p>
+    <p>We are a team of passionate professionals dedicated to providing high-quality products and services to our customers. With over 10 years of experience in the industry, we have built a reputation for excellence and experience in the industry, we have built a reputation innovation.</p>
     <img src="img/about.png" alt="About Us Image">
   </section>
 
