--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <a href="#home" class="active">Home</a>
   <a href="portfolio.html">Portfolio</a>
   <a href="#contact">Contact</a>
-  <a href="#about">About</a>
+  <a href="about.html">About</a>
   <a href="javascript:void(0);" class="icon" onclick="myFunction()">
     <i class="fa fa-bars"></i>
   </a>
@@ -59,6 +59,22 @@
   <div class="center">
     <a href="https://example.com" class="lin">More. . .</a>
   </div>
+
+
+  <!--social-media -->
+
+  <section class="social-media">
+    <div class="social-media-header">
+      <h3>Follow us on social media</h3>
+    </div>
+    <div class="social-media-icons">
+      <a href="#" class="social-media-icon"><i class="fa fa-facebook"></i></a>
+      <a href="#" class="social-media-icon"><i class="fa fa-twitter"></i></a>
+      <a href="#" class="social-media-icon"><i class="fa fa-instagram"></i></a>
+      <a href="#" class="social-media-icon"><i class="fa fa-youtube"></i></a>
+    </div>
+  </section>
+  
 
   <!-- footer -->
   
