--- a/contact.html
+++ b/contact.html
@@ -14,24 +14,15 @@
       </div></a>
   <a href="index.html" >Home</a>
   <a href="portfolio.html" >Portfolio</a>
-  <a href="contact.html">Contact</a>
-  <a href="about.html" class="active">About</a>
+  <a href="contact.html" class="active">Contact</a>
+  <a href="about.html" >About</a>
   <a href="javascript:void(0);" class="icon" onclick="myFunction()">
     <i class="fa fa-bars"></i>
   </a>
 </div>
 
-<!-- about -->
-<div class="about-us">
-    <div class="about-image">
-      <img src="img/img3.jpg" alt="About Us">
-    </div>
-    <div class="about-content">
-      <h1>About Us</h1>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed euismod diam quis diam ultrices, eu bibendum eros elementum. Vivamus volutpat, sapien sed varius bibendum, felis lectus faucibus felis, eu consectetur tellus est a enim.</p>
-      <p>Morbi accumsan nibh vel odio lobortis malesuada. Nulla lacinia justo nisi, eu rhoncus mi interdum eget. Nulla facilisi. Nullam eu arcu ligula. Nam volutpat vestibulum aliquam. Aliquam commodo nisi vel nunc eleifend imperdiet. Pellentesque congue diam a diam fringilla fringilla.</p>
-    </div>
-  </div>
+<!-- contact -->
+
   
 
   <!-- footer -->
