--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       </div></a>
   <a href="#home" class="active">Home</a>
   <a href="portfolio.html">Portfolio</a>
-  <a href="#contact">Contact</a>
+  <a href="contact.html">Contact</a>
   <a href="about.html">About</a>
   <a href="javascript:void(0);" class="icon" onclick="myFunction()">
     <i class="fa fa-bars"></i>
