--- a/portfolio.html
+++ b/portfolio.html
@@ -14,7 +14,7 @@
       </div></a>
   <a href="index.html" >Home</a>
   <a href="portfolio.html" class="active">Portfolio</a>
-  <a href="#contact">Contact</a>
+  <a href="contact.html">Contact</a>
   <a href="about.html">About</a>
   <a href="javascript:void(0);" class="icon" onclick="myFunction()">
     <i class="fa fa-bars"></i>
