--- a/portfolio.html
+++ b/portfolio.html
@@ -21,6 +21,15 @@
   </a>
 </div>
 
+<!-- main iamge -->
+<div class="header">
+  <img src="img/img5.jpg" alt="Header Image">
+  <div class="text">
+      <h3>Gallery.</h3>
+      <!-- <h1>Responsive Image Header Full Width</h1>
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ac justo magna. Nulla facilisi. Nullam hendrerit diam id neque commodo, eu scelerisque turpis tincidunt.</p> -->
+  </div>
+</div>
 
 <!-- gallery -->
 
